# ethiopian-identity-provider

./: .editorconfig  .flake8  .gitignore  404.html  CHANGELOG.md  CONTRIBUTORS.md  Procfile  README.md  gen_icons.py  group_app_dumpdata.json  index.html  load_daumdata.bat  load_daumdata.sh  manage.py  mkdocs.yml  oauth_app_dumpdata.json  pwa_icons.py  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  users_app_dumpdata.json
backend/: index.html
backend/command/: index.html
backend/group_and_staff/: index.html
backend/load_dump_data/: index.html
backend/renew_and_businesses/: index.html
docs/: index.md
docs/backend/: command.md  group_and_staff.md  index.md  load_dump_data.md  renew_and_businesses.md
docs/frontend/: index.md  new_app.md  new_business.md  renew.md  sign_in_and_profile.md
docs/js/: mermaid.min.js
docs/reference/: validators.md  views.md
docs/reference/users/: adapter.md  admin.md  context_processors.md  forms.md  models.md  permissions.md  utils.md  validators.md
etp/: asgi.py  settings.py  urls.py  validators.py  views.py  wsgi.py
frontend/: index.html
frontend/new_app/: index.html
frontend/new_business/: index.html
frontend/renew/: index.html
frontend/sign_in_and_profile/: index.html
local/am/LC_MESSAGES/: django.mo  django.po
local/ar/LC_MESSAGES/: django.mo  django.po
oauth_example/: client_credentials.py  resource_owner_password_based.py
oauth_example/authorization_code_flow/: main.py  models.py  pyproject.toml  requirements.txt  utils.py
reference/users/adapter/: index.html
reference/users/admin/: index.html
reference/users/context_processors/: index.html
reference/users/forms/: index.html
reference/users/models/: index.html
reference/users/permissions/: index.html
reference/users/utils/: index.html
reference/users/validators/: index.html
reference/validators/: index.html
reference/views/: index.html
search/: search_index.json
static/: manifest.json
templates/: base.html  security.txt  top_navbar.html
templates/admin/: base_site.html
templates/oauth2_provider/: application_confirm_delete.html  application_detail.html  application_form.html  application_list.html  application_registration_form.html  authorize.html  authorized-token-delete.html  authorized-tokens.html
templates/registration/: login.html
users/: admin.py  filter.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200806_1218.py
